# NetTopologySuite.Proofs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  HoTT-Status.md  Makefile  Makefile.full.gen  Makefile.full.gen.conf  Makefile.test.gen  Makefile.test.gen.conf  Makefile.testgen  Makefile.testgen.conf  README.md  TRIAGE_NTS_JTS_ISSUES.md  _CoqProject  _CoqProject.full  _CoqProject.hott  plan.md
.claude/: startup-rocq.sh
archive/: Dockerfile  README.md  _CoqProject.full  old-README-Proofs.md
dashboard/: README.md  index.html
docs/: FOR-AI-AGENTS.md  HELP.md  HoTT-Status.md  READING-GUIDE.md  admitted-counterexamples.txt  admitted-deferred-proofs.txt  arc-offset-red-test-example.cs  audit-exceptions.txt  audit-phase2-snap-rounding.md  audit-phase3-milestone5.md  audit-phase3-overlay.md  audit-phase4-chord-overfitting.md  audit-phase4-curves.md  audit-rgr-comparison.md  audit-shewchuk-stages.md  axiom-allowlist.txt  axiom-policy.md  besicovitch-kakeya-plan.md  buffer-depth-enclosure-counterexample.md  buffer-depth-guarded.md  buffer-depth-horizontal-edge-counterexample.md  buffer-depth-vertex-graze-counterexample.md  buffer-noder-pipeline.md  clothoid-open-questions-triage.md  curve-relate-matrix-lemma-reuse-map.md  dart-angular-order.md  dart-face.md  dart-halfedge-foundation.md  dart-next-injective.md  dart-next-spec.md  dart-next.md  development-environment.md  distance-cluster-2026-06-increment.md  ecosystem-search-2026-05-29.md  extract-face-polygon-jct.md  extract-faces-bridge.md  extract-faces.md  extract-flatten-counterexample.md  extract-rings-proof-structure.md  extract-rings-r5-slice-3i-prompt.md  (+82 more)
oracle/: .gitignore  Makefile  adversarial_tests.txt  arc_arc_distance_tests.txt  arc_arc_tests.txt  arc_area_centroid_tests.txt  arc_area_tests.txt  arc_buffer_simple_tests.txt  arc_centroid_tests.txt  arc_distance_tests.txt  arc_offset_filtered_tests.txt  arc_offset_tests.txt  arc_segment_distance_tests.txt  arc_segment_tests.txt  arc_simplify_decision_tests.txt  buffer_region_tests.txt  cp_boundary_simplify_tests.txt  cp_ring_simple_tests.txt  curve_polygon.py  curve_relate_matrix_tests.txt  de9im_arc_analytic_vectors.txt  de9im_arc_chord_vectors.txt  de9im_area_area_vectors.txt  de9im_area_line_vectors.txt  de9im_bezier3_vectors.txt  de9im_clothoid_vectors.txt  de9im_curve_area_point_vectors.txt  de9im_elliptic_vectors.txt  de9im_line_line_vectors.txt  driver.ml  gen_adversarial_curves.py  gen_adversarial_tests.sh  gen_arc_arc_distance_tests.py  gen_arc_arc_tests.py  gen_arc_area_centroid_tests.py  gen_arc_area_tests.py  gen_arc_buffer_simple_tests.py  gen_arc_centroid_tests.py  gen_arc_distance_tests.py  gen_arc_offset_tests.py  (+36 more)
packaging/: README.md
packaging/rocq-robust-predicates/: .gitignore  MANIFEST  Makefile  README.md  _CoqProject  assemble.sh  coq-robust-predicates.opam  default.nix  dune-project
packaging/rocq-robust-predicates/theories/: dune
packaging/rocq-robust-predicates/theories-flocq/: dune
packaging/rocq-spatial-algebra/: .gitignore  LICENSE  MANIFEST  Makefile  README.md  _CoqProject  coq-spatial-algebra.opam  default.nix  dune-project
packaging/rocq-spatial-algebra/theories/: dune
scripts/: audit_axioms.sh  buffer_axiom_smoke.sh  check_admitted.sh  check_deferred_registry_sync.sh  check_oracle_handrolled.sh  check_readme_axioms.sh  ci_assemble_palog.sh  ci_invalidate_stale_vo.py  ci_update_palog.sh  ci_vo_hash.py  ci_write_vo_manifest.py  cut-releases.ps1  gen_dashboard.py  theories_changed.sh  validate-claims.sh
theories/: AngleBetween.v  ArcArcCircles.v  ArcArcDistance.v  ArcArcSound.v  ArcArea.v  ArcAreaCentroid.v  ArcCentroid.v  ArcChordApprox.v  ArcChordDensity.v  ArcChordLength.v  ArcChordSound.v  ArcDistance.v  (+266 more)
theories-flocq/: ArcHotPixel_b64.v  ArcIntersect_b64.v  ArcLineIntersect_b64_exact.v  ArcOrient_b64.v  ArcOrient_b64_exact.v  ArcPixel_b64_compute.v  B64_Expansion.v  B64_Expansion_Shewchuk.v  B64_FastExpansionSum.v  B64_FastExpansionSum_Shewchuk.v  B64_FastExpansionSum_Shewchuk_Route2.v  B64_Pff_bridge.v  B64_Shewchuk_Thm13_counterexample.v  B64_Shewchuk_Thm13_pathAB.v  B64_TwoSum_probe.v  B64_TwoSum_sterbenz.v  B64_bridge.v  B64_nonoverlap_head.v  B64_pathB_trace_4A.v  B64_residue_granularity.v  ClothoidDegenerate_b64.v  ClothoidHalley_b64.v  ClothoidResidual_b64_exact.v  ClothoidScopeA_b64.v  DivRoundPow2_b64.v  ExtractFacesBridge.v  HobbyTheorem_b64.v  HotPixel_b64.v  InCircle_b64_compute.v  InCircle_b64_exact.v  Intersect_b64.v  Intersect_b64_exact.v  KakeyaOrient2d_b64.v  KakeyaPerron_b64.v  Orient_b64_Ozaki.v  Orient_b64_R.v  Orient_b64_dekker_int.v  Orient_b64_exact.v  Orient_b64_expansion.v  Orient_b64_int_safe.v  (+22 more)
theories-hott/: HobbyBaseEquiv.v  ShewchukBaseEquiv.v  VoronoiEquivalence.v
(+143 files in other folders)
